assets/style.css
/* RESET */
/* makes sizing simpler */
*,
*::before,
*::after {
  box-sizing: border-box;
}

/* remove default spacing */
/* force styling of type through styling, rather than elements */
* {
  margin: 0;
  padding: 0;
  font: inherit;
}

/* dark mode user-agent-styles */
html {
  color-scheme: dark light;
    scroll-behavior: smooth;
}

/* min body height */
body {
  min-height: 100vh;
}

/* responsive images/videos */
img,
picture,
svg,
video {
  display: block;
  max-width: 100%;
}

/* LAYOUT */

body{
    background-color: #00242C;
}

/* TYPOGRAPHY */

h1{
    font-family: 'Space Grotesk', serif;
    font-weight: 700;
    font-size: clamp(48px, 20vw, 120px);
    line-height: clamp(48px, 20vw, 120px);
}

h2{
    font-family: 'Space Grotesk', serif;
    font-size: clamp(30px, 5vw, 40px);
    font-weight: 700;
}

h3{
    font-family: 'Space Grotesk', serif;
    font-size: clamp(24px, 5vw, 40px);
    font-weight: 700;
    font-size: 40px;
    color: #00D1FF;
}

h4{
    font-family: 'Darker Grotesque', sans-serif;
    font-size: clamp(20px, 5vw, 32px);
    font-weight: 500;
}

h5{
    font-family: 'DM Sans', sans-serif;
    font-size: 16px;
    writing-mode: vertical-lr;
    color: #fff;
}

h6{
    font-family: 'Space Grotesk', serif;
    font-weight: 700;
    font-size: 20px;
    color: #00D1FF;
}

p{
    font-family: 'Darker Grotesque', sans-serif;
    font-size: 20px;
    font-weight: 500;
    line-height: 27px;
    color: #00D1FF;
}

li {
    font-family: 'Darker Grotesque', sans-serif;
    font-size: 20px;
    font-weight: 500;
    line-height: 27px;
    color: #00D1FF;
}

/* HEADER */
header{
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 2em;
    padding-bottom: 0;
}

.logo{
    max-width: 50px;
}

.links{
    display: flex;
    align-items: center;
    gap: 10px;
}

.menu-link{
    font-family: 'Darker Grotesque', sans-serif;
    color: #00D1FF;
    font-size: 20px;
    font-weight: 600;
}

/* LANDING */

.landing{
    padding: 1em;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    color:#00D1FF;
    position: relative;
    height: 90vh;
    margin-bottom: 2em;
}

.landing > img{
    max-width: 700px;
    width: 100%;
}

.introduction{
    text-align: left;
}

/* ARROW BUTTONS */
.arrow-down{
    margin-top: 0.5em;
    -webkit-animation: mover 1s infinite  alternate;
    animation: mover 1s infinite  alternate;    
  }
  
  @-webkit-keyframes mover {
    0% { transform: translateY(0); }
    100% { transform: translateY(-10px); }
}

.back-top{
    margin-left: auto;
    display: block;
    margin-bottom: 1em;
    max-width: 40px;
}

.arrow-back{
    margin-right: auto;
    display: block;
    margin-top: 2em;
    max-width: 40px;
    padding-bottom: 1em;
    position: relative;
    animation: moveLeft 2s infinite;
}

@keyframes moveLeft {
    0% {
      transform: translateX(0);
    }
    50% {
      transform: translateX(-20px); /* Adjust the distance as per your needs */
    }
    100% {
      transform: translateX(0);
    }
  }


  
/* STUDY CASES */

.study-case {
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    min-height: 100vh;
    padding-left: clamp(1em, 5vw, 2em);
    padding-right: clamp(1em, 5vw, 2em);
    padding-top: clamp(2em, 5vw, 4em);
    padding-bottom: clamp(2em, 5vw, 4em);
}

.study-example {
    display: flex;
    gap: 40px;
    max-width: 1800px;
    align-items: flex-start;
    margin-top: 1em;
}

.study-example > .prototypes-container {
    flex: 1.5;
}
  
.study-example > .information-container {
    flex: 1;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
}

.prototypes-container > img{
    max-width: 700px;
    width: 100%;
}
  
.language-text{
    font-family: 'DM Sans', sans-serif;
    font-size: 16px;
    color: #fff;
}

.language-container{
   display: flex;
   flex-direction: column;
   align-items: center;
}

.language-container img{
    max-width: 40px;
}

.languages{
    display: flex;
    gap: 15px;
    margin-bottom: 1em;
}

.tool-card{
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
    background-color: #00D1FF;
    border-radius: 8px;
    padding: 1em;
    width: clamp(100px, 50vw, 168px);
}

.tools{
    display: flex;
    gap: 1em;
    margin-bottom: 1em;
}

.example-link{
    color: #00242C;
    font-size: clamp(12px, 5vw, 16px);
    font-family: 'Space Grotesk', serif;
    font-weight: 600;
}

.example-link > a{
    color:#00242C;
}

.platform{
    color: #00242C;
    font-size: clamp(14px, 5vw, 16px);
}

.prototypes-container > p{
    padding-bottom: 2em;
}

.prototypes-container > img{
    margin: 0 auto;
}

img.smaller-prototype{
    max-width: 600px
}
.info > h6{
    margin-bottom: 0.5em;
}

.info > p{
    max-width: 550px;
}

ul{
    padding-left: 1.5em;
}

/* ABOUT ME */

.about-me{
    color: #00D1FF;
    max-height: 80vh;
    padding-left: clamp(1em, 5vw, 2em);
    padding-right: clamp(1em, 5vw, 2em);
    padding-top: clamp(1em, 5vw, 2em);
    padding-bottom: clamp(2em, 5vw, 4em);
}

.about-me > h1{
    text-align: center;
    padding-bottom: 0.5em;
}

.about-container{
    display: flex;
    justify-content: space-evenly;
    align-items: center; 
    gap: 10px;  
}

.text-container {
    flex: 1.3;
    max-width: 700px;
}
  
.image-container {
    flex: 1;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    max-width: 600px;
    padding-bottom: 1em;
}


@media screen and (max-width: 1100px) {
    .study-example,
    .about-container{
        flex-direction: column;
        align-items: center;
    }    
}

@media screen and (max-width: 524px) {
    .study-example{
        max-width: 350px;
        gap: 10px;
    }  

    .tools{
        flex-wrap: wrap;
        justify-content: center;
    }
    
    .information-container{
        max-width: 350px; 
    }

}

